[package]
name = "mock"
version = "0.1.0"
authors = ["himself65 <himself65@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
futures = "0.3.1"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
serde_repr = "0.1.5"
juniper = "0.14.2"